refactor(*): add proper user structs and localize common mongo keys
